--- a/Haptic_Glove_Development_Post/css/style.css
+++ b/Haptic_Glove_Development_Post/css/style.css
@@ -1,19 +1,19 @@
 #Go-Up {
-    display: flex;             /* Hidden by default */
-    position: fixed;           /* Fixed/sticky position */
-    bottom: 20px;              /* Place the button at the bottom of the page */
-    right: 30px;               /* Place the button 30px from the right */
-    z-index: 99;               /* Make sure it does not overlap */
-    border: none;              /* Remove borders */
-    outline: none;             /* Remove outline */
-    background-color: #e0771a;     /* Set a background color */
-    color: #1be20d;              /* Text color */
-    cursor: pointer;           /* Add a mouse pointer on hover */
-    padding: 15px;             /* Some padding */
-    border-radius: 10px;       /* Rounded corners */
-    font-size: 18px;           /* Increase font size */
+    display: flex;        
+    position: fixed;           
+    bottom: 20px;             
+    right: 30px;               
+    z-index: 99;               
+    border: none;              
+    outline: none;            
+    background-color: #e0771a;   
+    color: #1be20d;             
+    cursor: pointer;           
+    padding: 15px;             
+    border-radius: 10px;       
+    font-size: 18px;           
 }
 
 #Go-Up:hover {
-    background-color: #555;    /* Add a dark-grey background on hover */
+    background-color: #555;    
 }
